# libgeotiff

./: CMakeLists.txt  geotiff.vcproj  geotiff_vc10.vcxproj  geotiff_vc10.vcxproj.filters  usexp-geotiff-config.cmake
libxtiff/: xtiffio.h
